footer text alignment fix

--- a/about-us.css
+++ b/about-us.css
@@ -1045,6 +1045,7 @@ footer {
 .footer-social-media {
     display: flex;
     flex-direction: column;
+    margin-bottom: 2%;
 }
 
 .footer-social-media-section {
@@ -1052,6 +1053,7 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 2%;
 }
 
 .footer-social-title {
@@ -1088,7 +1090,8 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
+    padding-top: 5%;
 }
 
 .facebook-section {
@@ -1289,7 +1292,7 @@ footer iframe {
 .kvkk-popup {
     display: none;
     position: fixed;
-    background-color: var(--white);
+    background-color:#E1F2FB; 
     top: 0;
     bottom: 0;
     left: 0;
