--- a/index.css
+++ b/index.css
@@ -1460,6 +1460,7 @@ footer {
 .footer-social-media {
     display: flex;
     flex-direction: column;
+    margin-bottom: 2%;
 }
 
 .footer-social-media-section {
@@ -1467,7 +1468,7 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
 .footer-social-title {
@@ -1504,7 +1505,8 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
+    padding-top: 5%;
 }
 
 .facebook-section {
@@ -1717,7 +1719,7 @@ footer iframe {
 .kvkk-popup {
     display: none;
     position: fixed;
-    background-color: var(--white);
+    background-color:#E1F2FB; 
     top: 0;
     bottom: 0;
     left: 0;
