--- a/services.css
+++ b/services.css
@@ -1629,6 +1629,7 @@ footer {
 .footer-social-media {
     display: flex;
     flex-direction: column;
+    margin-bottom: 1%;
 }
 
 .footer-social-media-section {
@@ -1636,6 +1637,8 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom: 2%;
+
 }
 
 .footer-social-title {
@@ -1672,7 +1675,8 @@ footer {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-bottom: 5%;
+    padding-bottom: 10%;
+    padding-top: 5%;
 }
 
 .facebook-section {
@@ -1891,7 +1895,7 @@ footer iframe {
 .kvkk-popup {
     display: none;
     position: fixed;
-    background-color: var(--white);
+    background-color:#E1F2FB; 
     top: 0;
     bottom: 0;
     left: 0;
